# hexempire

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp  xaa
content/shaders/: hex_tile.frag.hlsl  hex_tile.vert.hlsl  sprite.vert.hlsl
content/ui/: player_stats.rml
content/ui/styles/: player_stats.rcss
src/: Camera.cpp  Camera.h  CameraSystem.cpp  CameraSystem.h  ResourceManager.cpp  ResourceManager.h  SpriteBatch.cpp  SpriteBatch.h  math.h
src/game/: AIController.cpp  AIController.h  CombatQueue.cpp  CombatQueue.h  CombatSystem.cpp  CombatSystem.h  GameController.cpp  GameController.h  GameData.h  InputHandler.cpp  InputHandler.h  ReplaySystem.cpp  ReplaySystem.h
src/hex/: HexCoord.h  HexGrid.cpp  HexGrid.h  HexMapData.cpp  HexMapData.h  HexMapRenderer.cpp  HexMapRenderer.h  IslandDetector.cpp  IslandDetector.h  TerritoryGenerator.cpp  TerritoryGenerator.h
src/shaders/: sprite.frag.hlsl  sprite.vert.hlsl  triangle.vert.hlsl
src/ui/: DiceRenderer.cpp  DiceRenderer.h  UIManager.cpp  UIManager.h
